Add rentals controller, clean up gemfile and minors

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Guestready</title>
+    <title>GuestReady Assignment</title>
     <%= csrf_meta_tags %>
-
+    <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCWV2kkwCHooSMVJ4agaeRa3qdt2Xyzbrs&libraries=places"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
